[package]
name = "file-finder"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/flickyiyo/file-finder"
repository = "https://github.com/flickyiyo/file-finder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.6.0"